Map styling looks more reasonable

--- a/client/src/components/MapDisplay/MapDisplay.css
+++ b/client/src/components/MapDisplay/MapDisplay.css
@@ -1,5 +1,6 @@
 .map-container {
     height: 400px;
+    width: 100vw;
     }
      
     .sidebar {
@@ -8,8 +9,8 @@
     padding: 6px 12px;
     font-family: monospace;
     z-index: 1;
-    position: absolute;
-    top: 0;
+    position: relative;
+    top: -400px;
     left: 0;
     margin: 12px;
     border-radius: 4px;
