--- a/client/src/components/MapDisplay/MapDisplay.css
+++ b/client/src/components/MapDisplay/MapDisplay.css
@@ -1,17 +1,20 @@
+.map-wrapper {
+    position: relative;
+}
 .map-container {
     height: 400px;
     width: 100vw;
     }
      
-    .sidebar {
+.sidebar {
     background-color: rgba(35, 55, 75, 0.9);
     color: #fff;
     padding: 6px 12px;
     font-family: monospace;
     z-index: 1;
-    position: relative;
-    top: -400px;
+    position: absolute;
+    top: 0;
     left: 0;
     margin: 12px;
     border-radius: 4px;
-    }
+}
